--- a/graphics.html
+++ b/graphics.html
@@ -180,7 +180,7 @@
         </div>
 
         <!-- <img src="./assets/images/bg.png" alt="shape" class="shape-content"> -->
-        <img src="./assets/img/seo.png" alt="seo">
+        <img src="./assets/img/graphics.png" alt="seo">
       </section>
 
       <section class="about" id="about">
@@ -662,63 +662,56 @@
       </div>
       <div class="faq-content">
         <div class="faq-left-content">
-          <img src="./assets/img/faq.png">
+          <img src="./assets/img/graphics-faq.png">
           <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi porro quam id sunt! Nobis beatae dignissimos sit dolorem eum, consequatur libero iste quisquam, magni aliquid ut eveniet. Nihil totam dolore eum ratione vero vel tempora, id quae deleniti consectetur sapiente.</p> -->
         </div>
 
         <div class="faq-right-content">
           <div class="faq-item">
             <div class="faq-item-head">
-              <span class="faq-item-text">What are the key components of SEO?</span>
+              <span class="faq-item-text">How do I choose the right graphic design style for my brand?</span>
               <span class="faq-item-icon">
                 <i class="fa fa-chevron-down"></i>
               </span>
             </div>
             <div class="faq-item-body">
-              <p>The key components of SEO include keyword research, on-page optimization (like meta tags and content),
-                off-page optimization (like backlinks), technical SEO (like site speed and mobile-friendliness), and
-                user experience.</p>
+              <p>The selection of graphic design style should be according to the brand identity, its audience type, and ongoing trends in its sphere.p>
             </div>
           </div>
 
           <div class="faq-item">
             <div class="faq-item-head">
-              <span class="faq-item-text">How does technical SEO affect my website?</span>
+              <span class="faq-item-text">What are the main types of graphic design?</span>
               <span class="faq-item-icon">
                 <i class="fa fa-chevron-down"></i>
               </span>
             </div>
             <div class="faq-item-body">
-              <p>Technical SEO focuses on the backend of your website to ensure search engines can crawl and index your
-                site effectively. This includes optimizing site speed, mobile-friendliness, site structure, and fixing
-                any technical issues.</p>
+              <p>Some of the common categories include branding, website design, packaging, advertisement, and illustration, each serving their distinct markets.</p>
             </div>
           </div>
 
           <div class="faq-item">
             <div class="faq-item-head">
-              <span class="faq-item-text">How often should I update my website for SEO?</span>
+              <span class="faq-item-text">How can a professional Graphic Designer help?</span>
               <span class="faq-item-icon">
                 <i class="fa fa-chevron-down"></i>
               </span>
             </div>
             <div class="faq-item-body">
-              <p>Regular updates are important for SEO. Keeping your content fresh and relevant, adding new pages, and
-                updating existing content can help maintain and improve your search engine rankings.</p>
+              <p>A professional graphic designer designs more presentable looking designs, develops a consistent branding image, creates better communication and also takes lesser time to execute.</p>
             </div>
           </div>
 
           <div class="faq-item">
             <div class="faq-item-head">
-              <span class="faq-item-text">Can I do SEO on my own, or do I need an expert?</span>
+              <span class="faq-item-text">What software tools do graphic designers typically use?</span>
               <span class="faq-item-icon">
                 <i class="fa fa-chevron-down"></i>
               </span>
             </div>
             <div class="faq-item-body">
-              <p> While you can start with basic SEO techniques on your own, hiring an SEO expert or agency can provide
-                more advanced strategies and insights. Professionals can help you achieve better results and stay
-                updated with the latest SEO trends.</p>
+              <p>Tools used by Graphic designers include, Adobe Photoshop, Illustrator, InDesign, CorelDraw, and Figma to create and edit graphics.<p>
             </div>
           </div>
         </div>
