--- a/localization.html
+++ b/localization.html
@@ -168,7 +168,7 @@
             <h1 class="h1 hero-title">Boost Your Brand with Professional Graphics Design Services</h1>
 
             <p class="hero-text">
-              Capture and retrieve your lists across devices to help you stay organized at work, home, and on the go.
+              Break Language Barriers and Expand Your Reach with Expert Translation & Localization.
             </p>
 
             <!-- <button class="btn btn-primary">Get started</button> -->
@@ -192,11 +192,11 @@
 
             <h2 class="h2 section-title">Our Services</h2>
 
-            <p class="section-text">
+           <!--  <p class="section-text">
               Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back into the
               development of
               the asset through its charitable foundation.
-            </p>
+            </p> -->
 
             <ul class="about-list">
 
@@ -207,11 +207,10 @@
                     <ion-icon name="brush-outline"></ion-icon>
                   </div>
 
-                  <h3 class="h3 card-title">Brand Identity Design</h3>
+                  <h3 class="h3 card-title">Document Translation</h3>
 
                   <p class="card-text">
-                    Search engines are constantly updating their algorithms. This content is building for users, Click
-                    Through Rates, Usability, Keywords Strategy, Interlinking
+                    Whether it is a business contract, advertisement, technical manuals, or financial statements, you can be sure in professional document translation with Verify Ads. We serve many sectors of business so you can be assured of materials being culturally relevant and legally compliant.
                   </p>
 
                   <a href="https://www.example.com" class="btn btn-primary">Explore</a>
@@ -718,7 +717,7 @@
       </div>
       <div class="faq-content">
         <div class="faq-left-content">
-          <img src="./assets/img/faq.png">
+          <img src="./assets/img/Translation & Localization-faq.png">
           <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi porro quam id sunt! Nobis beatae dignissimos sit dolorem eum, consequatur libero iste quisquam, magni aliquid ut eveniet. Nihil totam dolore eum ratione vero vel tempora, id quae deleniti consectetur sapiente.</p> -->
         </div>
 
