--- a/paidadd.html
+++ b/paidadd.html
@@ -180,7 +180,7 @@
         </div>
 
         <!-- <img src="./assets/images/bg.png" alt="shape" class="shape-content"> -->
-        <img src="./assets/img/seo.png" alt="seo">
+        <img src="./assets/img/paid.png" alt="seo">
       </section>
 
 
@@ -190,12 +190,12 @@
           <div class="about-top">
 
             <h2 class="h2 section-title">Our Services</h2>
-
+<!-- 
             <p class="section-text">
               At Verify Ads, we specialize in delivering results-driven paid advertising solutions that are tailored for
               your unique business needs. With a deep understanding of the digital landscape, our expert team creates
               campaigns that not only do capture the attention but also converts clicks into customers.
-            </p>
+            </p> -->
 
             <ul class="about-list">
 
@@ -665,7 +665,7 @@
       </div>
       <div class="faq-content">
         <div class="faq-left-content">
-          <img src="./assets/img/faq.png">
+          <img src="./assets/img/paidadd-faq.png">
           <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi porro quam id sunt! Nobis beatae dignissimos sit dolorem eum, consequatur libero iste quisquam, magni aliquid ut eveniet. Nihil totam dolore eum ratione vero vel tempora, id quae deleniti consectetur sapiente.</p> -->
         </div>
 
