--- a/promotion.html
+++ b/promotion.html
@@ -181,7 +181,7 @@
         </div>
 
         <!-- <img src="./assets/images/bg.png" alt="shape" class="shape-content"> -->
-        <img src="./assets/img/seo.png" alt="seo">
+        <img src="./assets/img/promotion.png" alt="seo">
       </section>
 
 
@@ -702,7 +702,7 @@
               <div class = "faq-title"><h1>Frequently Asked Questions</h1></div>
               <div class = "faq-content">
                   <div class = "faq-left-content">
-                      <img src = "./assets/img/faq.png">
+                      <img src = "./assets/img/promotion-faq.png">
                       <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi porro quam id sunt! Nobis beatae dignissimos sit dolorem eum, consequatur libero iste quisquam, magni aliquid ut eveniet. Nihil totam dolore eum ratione vero vel tempora, id quae deleniti consectetur sapiente.</p> -->
                   </div>
       
