--- a/seo.html
+++ b/seo.html
@@ -411,56 +411,6 @@
                     </div>
                   </li>
 
-                  <li>
-                    <div class="chooseus-card">
-
-                      <div class="card-icon">
-                        <ion-icon name="ribbon-outline"></ion-icon>
-                      </div>
-
-                      <h3 class="h3 card-title">Proven Results</h3>
-
-                      <p class="card-text">
-                        Join the league of countless satisfied clients who’ve seen significant growth in traffic and
-                        conversions with us.
-                      </p>
-
-                    </div>
-                  </li>
-
-                  <li>
-                    <div class="chooseus-card">
-
-                      <div class="card-icon">
-                        <ion-icon name="trending-up-outline"></ion-icon>
-                      </div>
-
-                      <h3 class="h3 card-title">Ongoing Support</h3>
-
-                      <p class="card-text">
-                        Our dedicated support team is always here to help you in navigating the myriad digital
-                        challenges.
-                      </p>
-
-                    </div>
-                  </li>
-
-                  <!-- <li>
-                    <div class="chooseus-card">
-
-                      <div class="card-icon">
-                        <ion-icon name="headset-outline"></ion-icon>
-                      </div>
-
-                      <h3 class="h3 card-title">Free Support</h3>
-
-                      <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
-                      </p>
-
-                    </div>
-                  </li> -->
-
 
                 </ul>
 
@@ -748,7 +698,7 @@
               </span>
             </div>
             <div class="faq-item-body">
-              <p>Key components of SEO include keyword research, on-page optimization, quality content, technical SEO, backlinks, user experience, and analytics monitoring.</p>
+              <p>Technical SEO helps in improving the ability of search engine crawlers to access your site, indexing of your site, site speed, and security, thus leading to improved search rankings and better user experience..</p>
             </div>
           </div>
 
