--- a/smo.html
+++ b/smo.html
@@ -193,11 +193,11 @@
 
             <h2 class="h2 section-title">Our Services</h2>
 
-            <p class="section-text">
+            <!-- <p class="section-text">
               Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back into the
               development of
               the asset through its charitable foundation.
-            </p>
+            </p> -->
 
             <ul class="about-list">
 
@@ -208,11 +208,10 @@
                     <ion-icon name="document-text-outline"></ion-icon>
                   </div>
 
-                  <h3 class="h3 card-title">On-Page Optimization</h3>
+                  <h3 class="h3 card-title">Social Media Strategy Development</h3>
 
                   <p class="card-text">
-                    Search engines are constantly updating their algorithms. This content is building for users, Click
-                    Through Rates, Usability, Keywords Strategy, Interlinking
+                    Tailored strategies for targeted promotion, reach, and conversions in the sphere of Facebook, Instagram, Twitter, and LinkedIn.
                   </p>
 
                   <a href="https://www.example.com" class="btn btn-primary">Explore</a>
@@ -669,7 +668,7 @@
       </div>
       <div class="faq-content">
         <div class="faq-left-content">
-          <img src="./assets/img/faq.png">
+          <img src="./assets/img/smm-faq.png">
           <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi porro quam id sunt! Nobis beatae dignissimos sit dolorem eum, consequatur libero iste quisquam, magni aliquid ut eveniet. Nihil totam dolore eum ratione vero vel tempora, id quae deleniti consectetur sapiente.</p> -->
         </div>
 
