--- a/web.html
+++ b/web.html
@@ -714,63 +714,56 @@
       </div>
       <div class="faq-content">
         <div class="faq-left-content">
-          <img src="./assets/img/faq.png">
+          <img src="./assets/img/web-faq.png">
           <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi porro quam id sunt! Nobis beatae dignissimos sit dolorem eum, consequatur libero iste quisquam, magni aliquid ut eveniet. Nihil totam dolore eum ratione vero vel tempora, id quae deleniti consectetur sapiente.</p> -->
         </div>
 
         <div class="faq-right-content">
           <div class="faq-item">
             <div class="faq-item-head">
-              <span class="faq-item-text">What are the key components of SEO?</span>
+              <span class="faq-item-text">What are the key elements of effective web design?</span>
               <span class="faq-item-icon">
                 <i class="fa fa-chevron-down"></i>
               </span>
             </div>
             <div class="faq-item-body">
-              <p>The key components of SEO include keyword research, on-page optimization (like meta tags and content),
-                off-page optimization (like backlinks), technical SEO (like site speed and mobile-friendliness), and
-                user experience.</p>
+              <p>Good website design includes the ease of navigation, layout hierarchy, consistent brand standard, as well as layout responsiveness along with the clear calls for action for better user interaction.</p>
             </div>
           </div>
 
           <div class="faq-item">
             <div class="faq-item-head">
-              <span class="faq-item-text">How does technical SEO affect my website?</span>
+              <span class="faq-item-text">What is responsive design, and why is it important?</span>
               <span class="faq-item-icon">
                 <i class="fa fa-chevron-down"></i>
               </span>
             </div>
             <div class="faq-item-body">
-              <p>Technical SEO focuses on the backend of your website to ensure search engines can crawl and index your
-                site effectively. This includes optimizing site speed, mobile-friendliness, site structure, and fixing
-                any technical issues.</p>
+              <p>Responsive design adapts to certain interfaces of smaller or larger devices thus the functionality for multiple devices improves the customer experience and the search engine optimization.</p>
             </div>
           </div>
 
           <div class="faq-item">
             <div class="faq-item-head">
-              <span class="faq-item-text">How often should I update my website for SEO?</span>
+              <span class="faq-item-text">How can I improve my website's loading speed?</span>
               <span class="faq-item-icon">
                 <i class="fa fa-chevron-down"></i>
               </span>
             </div>
             <div class="faq-item-body">
-              <p>Regular updates are important for SEO. Keeping your content fresh and relevant, adding new pages, and
-                updating existing content can help maintain and improve your search engine rankings.</p>
+              <p>The speeding up of the loading speed of a website is to optimize image responsive and minimal code, implement browser caching, and appropriately implementing Content Delivery Network (CDN).</p>
             </div>
           </div>
 
           <div class="faq-item">
             <div class="faq-item-head">
-              <span class="faq-item-text">Can I do SEO on my own, or do I need an expert?</span>
+              <span class="faq-item-text">How can I optimize my website for search engines?</span>
               <span class="faq-item-icon">
                 <i class="fa fa-chevron-down"></i>
               </span>
             </div>
             <div class="faq-item-body">
-              <p> While you can start with basic SEO techniques on your own, hiring an SEO expert or agency can provide
-                more advanced strategies and insights. Professionals can help you achieve better results and stay
-                updated with the latest SEO trends.</p>
+              <p>Select relevant keywords, use appropriate content, on-site optimization, meta tags description, and work on site speed and structure.</p>
             </div>
           </div>
         </div>
