--- a/index.html
+++ b/index.html
@@ -349,19 +349,16 @@
 
           <div class="carousel-container">
             <div class="carousel">
-              <img src="./assets/img/chanel.webp" alt="Company 1 Logo">
-              <img src="./assets/img/ebay.webp" alt="Company 2 Logo">
-              <img src="./assets/img/fedex.webp" alt="Company 3 Logo">
-              <img src="./assets/img/fedex.webp" alt="Company 4 Logo">
-              <img src="./assets/img/mcdonalds.webp" alt="Company 5 Logo">
-              <img src="./assets/img/walmart.webp" alt="Company 6 Logo">
-              <img src="./assets/img/nestlé.webp" alt="Company 7 Logo">
-              <img src="./assets/img/mastercard.webp" alt="Company 8 Logo">
-              <img src="./assets/img/starbucks.webp" alt="Company 9 Logo">
-              <img src="./assets/img/disney.webp" alt="Company 10 Logo">
-              <img src="./assets/img/volkswagen.webp" alt="Company 11 Logo">
-              <img src="./assets/img/wwf-logo-2400x2400-20220512.webp" alt="Company 12 Logo">
-              <img src="./assets/img/exxon.webp" alt="Company 13 Logo">
+              <!-- <img src="./assets/img/chanel.webp" alt="Company 1 Logo"> -->
+              <img src="./assets/img/biosan-logo.webp" alt="Company 2 Logo">
+              <img src="./assets/img/Bima Carrer__Updated Logo.webp" alt="Company 3 Logo">
+              <img src="./assets/img/farmart.webp" alt="Company 4 Logo">
+              <img src="./assets/img/infyCare-logo.webp" alt="Company 5 Logo">
+              <img src="./assets/img/logoVilla-la-Madonnina1.webp" alt="Company 6 Logo">
+              <img src="./assets/img/ross toys logo.webp" alt="Company 7 Logo">
+              <img src="./assets/img/usce logo.webp" alt="Company 8 Logo">
+              <img src="./assets/img/brotherly-love 215.webp" alt="Company 9 Logo">
+              <img src="./assets/img/roger person.webp" alt="Company 10 Logo">
             </div>
           </div>
 
