--- a/localization.html
+++ b/localization.html
@@ -224,11 +224,10 @@
                     <ion-icon name="stats-chart-outline"></ion-icon>
                   </div>
 
-                  <h3 class="h3 card-title">Infographics</h3>
+                  <h3 class="h3 card-title">Website Localization</h3>
 
                   <p class="card-text">
-                    Building a high-quality and relevant backlink is driven heavy traffic that is the final step to
-                    ensure you are well
+                    A great website is a global website. We assist in adapting the linguistic characteristics of your web site, its appearance, and practical functionality to the preferred culture of a definite region. We make sure that your online presence reflects the brand and message directly to the target market and in their understanding language for higher conversion rate.
                   </p>
 
                   <a href="https://www.example.com" class="btn btn-primary">Explore</a>
@@ -242,7 +241,7 @@
                     <ion-icon name="megaphone-outline"></ion-icon>
                   </div>
 
-                  <h3 class="h3 card-title">Advertising Graphics</h3>
+                  <h3 class="h3 card-title">Multilingual Content Creation</h3>
 
                   <p class="card-text">
                     Web pages are technically improved such as speed, crawlability, URLs structure, website code
@@ -253,17 +252,17 @@
                 </div>
               </li>
 
-              <!--  <li>
+               <li>
                 <div class="about-card">
 
                   <div class="card-icon">
                     <ion-icon name="search-outline"></ion-icon>
                   </div>
 
-                  <h3 class="h3 card-title">Search Engine Optimization </h3>
+                  <h3 class="h3 card-title">App Localization</h3>
 
                   <p class="card-text">
-                    Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                    Increase your app users’ base by considering different interfaces and content when launching your app in new areas. We focus on transcribing text, converting and localising features, and making sure the customers’ experience does not suffer when you expand your markets.
                   </p>
 
                   <a href="https://www.example.com" class="btn btn-primary">Explore</a>
@@ -277,10 +276,10 @@
                     <ion-icon name="videocam-outline"></ion-icon>
                   </div>
 
-                  <h3 class="h3 card-title">Promotional Video Marketing</h3>
+                  <h3 class="h3 card-title">E-commerce Localization</h3>
 
                   <p class="card-text">
-                    Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                    It is crucial to make sure that your online store is optimized for the international customer base. Our e-commerce localization services help with product descriptions, customer support, payment gateways, and more. Thus, ensuring one of the seamless shopping experiences for your global clientele. 
                   </p>
 
                   <a href="https://www.example.com" class="btn btn-primary">Explore</a>
@@ -294,16 +293,15 @@
                     <ion-icon name="color-palette-outline"></ion-icon>
                   </div>
 
-                  <h3 class="h3 card-title">Graphics Design</h3>
+                  <h3 class="h3 card-title">Legal Translation</h3>
 
                   <p class="card-text">
-                    Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                    Ensure your legal documents, contracts, terms and conditions, and agreements get translated whilst ensuring a compliance to relevant laws in a certain region. We provide you with skilled legal translators who are familiar with legal terminologies and are able to meet the cultural appropriation.
                   </p>
 
                   <a href="https://www.example.com" class="btn btn-primary">Explore</a>
                 </div>
               </li>
- -->
 
             </ul>
 
@@ -352,11 +350,11 @@
 
                 <h2 class="h2 section-title">Why choose Us!</h2>
 
-                <p class="section-text">
+                <!-- <p class="section-text">
                   Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back into the
                   development of
                   the asset through its charitable foundation.
-                </p>
+                </p> -->
 
                 <ul class="about-list">
 
@@ -367,7 +365,7 @@
                         <ion-icon name="pricetag-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Cost Effective</h3>
+                      <h3 class="h3 card-title">Expertise Across Industries</h3>
 
                       <p class="card-text">
                         Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
