--- a/smo.html
+++ b/smo.html
@@ -225,11 +225,10 @@
                     <ion-icon name="share-social-outline"></ion-icon>
                   </div>
 
-                  <h3 class="h3 card-title">Off-Page Optimization</h3>
+                  <h3 class="h3 card-title">Content Creation & Curation</h3>
 
                   <p class="card-text">
-                    Building a high-quality and relevant backlink is driven heavy traffic that is the final step to
-                    ensure you are well
+                    High-quality, engaging content designed for your targeted audience and meets the brand values across the products and services you offer.
                   </p>
 
                   <a href="https://www.example.com" class="btn btn-primary">Explore</a>
@@ -243,11 +242,10 @@
                     <ion-icon name="shield-checkmark-outline"></ion-icon>
                   </div>
 
-                  <h3 class="h3 card-title">Technical</h3>
+                  <h3 class="h3 card-title">Social Media Analytics & Reporting</h3>
 
                   <p class="card-text">
-                    Web pages are technically improved such as speed, crawlability, URLs structure, website code
-                    quality, and website security.
+                    Detailed performance reports that will help you understand the improvement, participation the effectiveness of your social media campaigns.
                   </p>
 
                   <a href="https://www.example.com" class="btn btn-primary">Explore</a>
@@ -302,11 +300,11 @@
 
                 <h2 class="h2 section-title">Why choose Us!</h2>
 
-                <p class="section-text">
+                <!-- <p class="section-text">
                   Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back into the
                   development of
                   the asset through its charitable foundation.
-                </p>
+                </p> -->
 
                 <ul class="about-list">
 
@@ -317,11 +315,10 @@
                         <ion-icon name="pricetag-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Cost Effective</h3>
+                      <h3 class="h3 card-title">Proven Expertise</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
-                      </p>
+                        Years of experience and track record proves that our company can help in the enhancement of the brands presence on social media.
 
                     </div>
                   </li>
@@ -333,10 +330,10 @@
                         <ion-icon name="person-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Dedicated a Project Maneger</h3>
+                      <h3 class="h3 card-title">Tailored Strategies</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        Custom strategies designed specifically for your brand, target customers as well as the goals you intend to achieve.
                       </p>
 
                     </div>
@@ -349,63 +346,14 @@
                         <ion-icon name="sync-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Team Collaboration</h3>
+                      <h3 class="h3 card-title">Results-Oriented Focus</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        Everything that we do is designed to deliver measurable outcomes whether its brand awareness, engagement, or conversions.
                       </p>
 
                     </div>
                   </li>
-
-                  <li>
-                    <div class="chooseus-card">
-
-                      <div class="card-icon">
-                        <ion-icon name="ribbon-outline"></ion-icon>
-                      </div>
-
-                      <h3 class="h3 card-title">White Hat SEO Technique</h3>
-
-                      <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
-                      </p>
-
-                    </div>
-                  </li>
-
-                  <li>
-                    <div class="chooseus-card">
-
-                      <div class="card-icon">
-                        <ion-icon name="trending-up-outline"></ion-icon>
-                      </div>
-
-                      <h3 class="h3 card-title">Soaring Conversion Rate</h3>
-
-                      <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
-                      </p>
-
-                    </div>
-                  </li>
-
-                  <li>
-                    <div class="chooseus-card">
-
-                      <div class="card-icon">
-                        <ion-icon name="headset-outline"></ion-icon>
-                      </div>
-
-                      <h3 class="h3 card-title">Free Support</h3>
-
-                      <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
-                      </p>
-
-                    </div>
-                  </li>
-
 
                 </ul>
 
