--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
   <!-- Mission Statement Section -->
 <section class="mission-section">
     <h2>About Us</h2>
-    <p>We are the face behind transforming your visions into digital realities.</p>
+    <!-- <p>We are the face behind transforming your visions into digital realities.</p> -->
 </section>
 
 <section class="hero-section">
