--- a/carrer.html
+++ b/carrer.html
@@ -136,8 +136,8 @@
         <!-- Header content removed as requested -->
         <div class="carrer-text">
             <h2 class="heading">Career</h2>
-            <p>Verify Ads is an equal opportunity employer. We appreciate the diverse people, and we support equal opportunities for every employee.</p>
-        </div>
+<!--             <p>Verify Ads is an equal opportunity employer. We appreciate the diverse people, and we support equal opportunities for every employee.</p>
+ -->        </div>
     </section>
 
     <section class="carrer-section" id="expert">
