--- a/portfolio.html
+++ b/portfolio.html
@@ -135,8 +135,8 @@
     <!-- Header content removed as requested -->
     <div class="expert-text">
       <h2 class="heading">Our Portfolio</h2>
-      <p>Verify Ads provides highly experienced virtual assistants with subject matter expertise across a wide
-        selection of industries.</p>
+      <!-- <p>Verify Ads provides highly experienced virtual assistants with subject matter expertise across a wide
+        selection of industries.</p> -->
     </div>
   </section>
 
