--- a/team.html
+++ b/team.html
@@ -136,8 +136,8 @@
     <!-- Header content removed as requested -->
     <div class="expert-text">
       <h2 class="heading">Our Team</h2>
-      <p>Verify Ads provides highly experienced virtual assistants with subject matter expertise across a wide
-        selection of industries.</p>
+     <!--  <p>Verify Ads provides highly experienced virtual assistants with subject matter expertise across a wide
+        selection of industries.</p> -->
     </div>
   </section>
 
@@ -148,10 +148,7 @@
           <img src="./assets/img/Pabitra sir.jpg" alt="Graphic Designers">
           <h3>Pabitra Mohan Pradhan</h3>
           <h4>DIGITAL DIRECTOR</h4>
-          <p>"As the co-founder of Verified Ads, I bring a passion for innovative digital marketing strategies that
-            drive results. I focus on creating smart marketing strategies and using new technology to ensure our clients
-            succeed in the digital world. My goal is to help brands reach their audience effectively and helping
-            businesses grow online."</p>
+          <p>"As the co-founder of Verify Ads, I’m driven by the desire for implementing innovative digital advertising techniques to provide tangible results. I focus on the development of strategic and efficient marketing and adverting tactics by application of modern technology for the benefit of our clients in the digital world. I aim to transform brand communication and deliver valuable, engaging consumer experiences that contribute to business success across the digital landscape. "</p>
 
         </div>
       </div>
