--- a/expert.html
+++ b/expert.html
@@ -133,8 +133,8 @@
     <!-- Header content removed as requested -->
     <div class="expert-text">
       <h2 class="heading">Our Virtual Staff</h2>
-      <p>Verify Ads provides highly experienced virtual assistants with subject matter expertise across a wide selection
-        of industries.</p>
+     <!--  <p>Verify Ads provides highly experienced virtual assistants with subject matter expertise across a wide selection
+        of industries.</p> -->
     </div>
   </section>
 
