--- a/localization.html
+++ b/localization.html
@@ -213,7 +213,7 @@
                     Whether it is a business contract, advertisement, technical manuals, or financial statements, you can be sure in professional document translation with Verify Ads. We serve many sectors of business so you can be assured of materials being culturally relevant and legally compliant.
                   </p>
 
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
+                  <a href="contact.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -230,27 +230,10 @@
                     A great website is a global website. We assist in adapting the linguistic characteristics of your web site, its appearance, and practical functionality to the preferred culture of a definite region. We make sure that your online presence reflects the brand and message directly to the target market and in their understanding language for higher conversion rate.
                   </p>
 
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
+                  <a href="contact.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
-              <li>
-                <div class="about-card">
-
-                  <div class="card-icon">
-                    <ion-icon name="megaphone-outline"></ion-icon>
-                  </div>
-
-                  <h3 class="h3 card-title">Multilingual Content Creation</h3>
-
-                  <p class="card-text">
-                    Web pages are technically improved such as speed, crawlability, URLs structure, website code
-                    quality, and website security.
-                  </p>
-
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
-                </div>
-              </li>
 
                <li>
                 <div class="about-card">
@@ -265,44 +248,11 @@
                     Increase your app users’ base by considering different interfaces and content when launching your app in new areas. We focus on transcribing text, converting and localising features, and making sure the customers’ experience does not suffer when you expand your markets.
                   </p>
 
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
+                  <a href="contact.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
-              <li>
-                <div class="about-card">
-
-                  <div class="card-icon">
-                    <ion-icon name="videocam-outline"></ion-icon>
-                  </div>
-
-                  <h3 class="h3 card-title">E-commerce Localization</h3>
-
-                  <p class="card-text">
-                    It is crucial to make sure that your online store is optimized for the international customer base. Our e-commerce localization services help with product descriptions, customer support, payment gateways, and more. Thus, ensuring one of the seamless shopping experiences for your global clientele. 
-                  </p>
-
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
-                </div>
-              </li>
-
-              <li>
-                <div class="about-card">
-
-                  <div class="card-icon">
-                    <ion-icon name="color-palette-outline"></ion-icon>
-                  </div>
-
-                  <h3 class="h3 card-title">Legal Translation</h3>
-
-                  <p class="card-text">
-                    Ensure your legal documents, contracts, terms and conditions, and agreements get translated whilst ensuring a compliance to relevant laws in a certain region. We provide you with skilled legal translators who are familiar with legal terminologies and are able to meet the cultural appropriation.
-                  </p>
-
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
-                </div>
-              </li>
-
+            
             </ul>
 
           </div>
@@ -368,7 +318,7 @@
                       <h3 class="h3 card-title">Expertise Across Industries</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        Verify Ads employs specialists from e-Commerce, health care, law, and technology. Our translators and localization professionals are industry-aware for accurate translation.
                       </p>
 
                     </div>
@@ -381,10 +331,10 @@
                         <ion-icon name="person-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Dedicated a Project Maneger</h3>
+                      <h3 class="h3 card-title">Scalability and Flexibility</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        We provide professional service packages that may be tailored for small and large businesses. If you need one document translated or a website localized, we can help you expand globally.
                       </p>
 
                     </div>
@@ -397,16 +347,16 @@
                         <ion-icon name="sync-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Team Collaboration</h3>
+                      <h3 class="h3 card-title">Comprehensive Quality Assurance</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        Maximum quality is achieved by peer review of each translation. Our translations are contextually exact and are done professionally. Our staff reviews all source documents to ensure quality and clarity.
                       </p>
 
                     </div>
                   </li>
 
-                  <li>
+                 <!--  <li>
                     <div class="chooseus-card">
 
                       <div class="card-icon">
@@ -453,7 +403,7 @@
 
                     </div>
                   </li>
-
+ -->
 
                 </ul>
 
