--- a/package.html
+++ b/package.html
@@ -108,8 +108,8 @@
         <!-- Header content removed as requested -->
         <div class="package-text">
             <h2 class="heading">PACKAGE</h2>
-            <p>Verify Ads provides highly experienced virtual assistants with subject matter expertise across a wide
-                selection of industries.</p>
+            <!-- <p>Verify Ads provides highly experienced virtual assistants with subject matter expertise across a wide
+                selection of industries.</p> -->
         </div>
     </section>
 
