--- a/footer.html
+++ b/footer.html
@@ -8,8 +8,7 @@
           <img src="./assets/img/verify_ads_png.png" alt="digitize logo" class="footerlogo">
 
 
-          <p class="footer-text">DigitizeAds is Bhubaneswar's Top Internet Marketing Firm and Website Promotion Company.
-            We offer multiple web services to our worldwide clients. To get outstanding web services from us</p>
+          <p class="footer-text">Verify Ads provides the best in class Digital Marketing Solution for an effective brand enhancement. We not just provide the best but we are the best.</p>
 
           <p class="social-text">Follow Us :</p>
 
