--- a/index.html
+++ b/index.html
@@ -895,8 +895,8 @@
       }
   
       // API URL
-      const apiUrl = 'http://localhost/restapi/newsletter/newsletter'; //local db connection
-      // const apiUrl = 'https://verifyads.com/restapi/newsletter/newsletter'; //production db connection 
+      // const apiUrl = 'http://localhost/restapi/newsletter/newsletter';
+      const apiUrl = 'https://verifyads.com/restapi/newsletter/newsletter';
       try {
         // Sending POST request to API
         const response = await fetch(apiUrl, {
