--- a/expert.html
+++ b/expert.html
@@ -140,7 +140,7 @@
 
   <section class="experte" id="expert">
     <div class="container">
-      <h2 class="experte-title">Virtual Service Provider</h2>
+     <!--  <h2 class="experte-title">Virtual Service Provider</h2> -->
 
       <div class="role-grid">
         <div class="role-card">
@@ -180,7 +180,7 @@
         </div>
         <div class="role-card">
           <img src="./assets/img/hr.jpg" alt="Bookkeepers">
-          <h3>HR</h3>
+          <h3>Content Writer</h3>
           <p>No bookkeeping task is off-limits for us. We help create financial reports, process invoices, monitor cash
             flows, and more.</p>
           <a href="javascript:void(0)" class="btn btn-primary">Explore More</a>
