--- a/service.html
+++ b/service.html
@@ -148,49 +148,49 @@
           <h3>Search Engine Optimization</h3>
           <p>Spend more time on what matters most. Let our executive virtual assistants manage your emails, calendars,
             and other routine tasks.</p>
-          <a href="seo" class="btn btn-primary">Explore More</a>
+          <a href="seo.html" class="btn btn-primary">Explore More</a>
 
         </div>
         <div class="role-card">
           <img src="./assets/img/design.jpg" alt="smo">
           <h3>Social Media Optimization</h3>
           <p>Get your print or digital projects ready for publishing with our graphic designers.</p>
-          <a href="smo" class="btn btn-primary">Explore More</a>
+          <a href="smo.html" class="btn btn-primary">Explore More</a>
         </div>
         <div class="role-card">
           <img src="./assets/img/smo1.jpg" alt="website development">
           <h3>Website Design &Development</h3>
           <p>From generating sales opportunities to contacting prospects, our virtual assistants help you build a
             stronger pipeline.</p>
-          <a href="web" class="btn btn-primary">Explore More</a>
+          <a href="web.html" class="btn btn-primary">Explore More</a>
         </div>
         <div class="role-card">
           <img src="./assets/img/programming.jpg" alt="graphics">
           <h3>Graphics Design</h3>
           <p>Leverage our multilingual customer support specialists to resolve your customer issues efficiently across
             all channels.</p>
-          <a href="graphics" class="btn btn-primary">Explore More</a>
+          <a href="graphics.html" class="btn btn-primary">Explore More</a>
         </div>
         <div class="role-card">
           <img src="./assets/img/android.jpg" alt="Promotion Video Marketing">
           <h3>Promotion Video Marketing</h3>
           <p>Be it social media design, copywriting, or website management, our virtual assistants streamline all your
             online marketing needs.</p>
-          <a href="promotion" class="btn btn-primary">Explore More</a>
+          <a href="promotion.html" class="btn btn-primary">Explore More</a>
         </div>
         <div class="role-card">
           <img src="./assets/img/hr.jpg" alt="paid Advartising All Platform<">
           <h3>Paid Advartising All Platform</h3>
           <p>No bookkeeping task is off-limits for us. We help create financial reports, process invoices, monitor cash
             flows, and more.</p>
-          <a href="paidadd" class="btn btn-primary">Explore More</a>
+          <a href="paidadd.html" class="btn btn-primary">Explore More</a>
         </div>
         <div class="role-card">
           <img src="./assets/img/hr.jpg" alt="Translation & Localization Serice">
           <h3>Translation & Localization Service</h3>
           <p>No bookkeeping task is off-limits for us. We help create financial reports, process invoices, monitor cash
             flows, and more.</p>
-          <a href="localization" class="btn btn-primary">Explore More</a>
+          <a href="localization.html" class="btn btn-primary">Explore More</a>
         </div>
       </div>
     </div>
