--- a/package.html
+++ b/package.html
@@ -220,12 +220,12 @@
             </tbody>
         </table>
         <div class="pricing-buttons">
-            <a href="contact"> <button class="buy-now black">BUY NOW</button></a>
-            <a href="contact"> <button class="buy-now black">BUY NOW</button></a>
-            <a href="contact"> <button class="buy-now black">BUY NOW</button></a>
-            <a href="contact"> <button class="buy-now black">BUY NOW</button></a>
-            <a href="contact"> <button class="buy-now black">BUY NOW</button></a>
-            <a href="contact"> <button class="buy-now black">BUY NOW</button></a>
+            <a href="contact.html"> <button class="buy-now black">BUY NOW</button></a>
+            <a href="contact.html"> <button class="buy-now black">BUY NOW</button></a>
+            <a href="contact.html"> <button class="buy-now black">BUY NOW</button></a>
+            <a href="contact.html"> <button class="buy-now black">BUY NOW</button></a>
+            <a href="contact.html"> <button class="buy-now black">BUY NOW</button></a>
+            <a href="contact.html"> <button class="buy-now black">BUY NOW</button></a>
         </div>
     </div>
 
