--- a/carrer.html
+++ b/carrer.html
@@ -161,7 +161,7 @@
         </div>
         <div class="internships">
             <h2>INTERNSHIPS</h2>
-            <p>At Verify Ads, you and your growth are our concern. Stay ahead on the current trends in tools that are regularly used in the industry of digital marketing. Our overall goal of investing into our team means giving them what they need to succeed in this fast-paced industry.p>
+            <p>At Verify Ads, you and your growth are our concern. Stay ahead on the current trends in tools that are regularly used in the industry of digital marketing. Our overall goal of investing into our team means giving them what they need to succeed in this fast-paced industry.<p>
         </div>
         <div class="benefits">
             <h2>BENEFITS</h2>
