--- a/contact.html
+++ b/contact.html
@@ -219,22 +219,22 @@
       <div class="info-block">
 
         <div class="info-text">
-          <h3>ABOUT CLUB</h3>
-          <p>Running Guide<br>Workouts</p>
+          <h3>EMAIL US</h3>
+          <p>sales@digitizeads.com</p>
         </div>
       </div>
       <div class="info-block">
 
         <div class="info-text">
-          <h3>PHONE (LANDLINE)</h3>
-          <p>+912 3 567 8987<br>+912 5 252 3336</p>
+          <h3>PHONE NUMBER</h3>
+          <p>+91-7788994131</p>
         </div>
       </div>
       <div class="info-block">
 
         <div class="info-text">
           <h3>OUR OFFICE LOCATION</h3>
-          <p>The Interior Design Studio Company<br>The Courtyard, Al Quoz 1, Colorado, USA</p>
+          <p>Bhubaneswar – Head Office: Plot No.1002/2430, IRC Village, Ps-Nayapalli, Dist-Khordha, Bhubaneswar, Odisha - 751015</p>
         </div>
       </div>
     </div>
