--- a/index.html
+++ b/index.html
@@ -347,15 +347,20 @@
           <div class="carousel-container">
             <div class="carousel">
               <!-- <img src="./assets/img/chanel.webp" alt="Company 1 Logo"> -->
-              <img src="./assets/img/biosan-logo.webp" alt="Company 2 Logo">
-              <img src="./assets/img/Bima Carrer__Updated Logo.webp" alt="Company 3 Logo">
-              <img src="./assets/img/farmart.webp" alt="Company 4 Logo">
-              <img src="./assets/img/infyCare-logo.webp" alt="Company 5 Logo">
-              <img src="./assets/img/logoVilla-la-Madonnina1.webp" alt="Company 6 Logo">
-              <img src="./assets/img/ross toys logo.webp" alt="Company 7 Logo">
-              <img src="./assets/img/usce logo.webp" alt="Company 8 Logo">
-              <img src="./assets/img/brotherly-love 215.webp" alt="Company 9 Logo">
-              <img src="./assets/img/roger person.webp" alt="Company 10 Logo">
+              <img src="./assets/img/logo1.png" alt="Company 2 Logo">
+              <img src="./assets/img/logo2.png" alt="Company 3 Logo">
+              <img src="./assets/img/logo3.png" alt="Company 4 Logo">
+              <img src="./assets/img/logo4.png" alt="Company 5 Logo">
+              <img src="./assets/img/logo5.png" alt="Company 6 Logo">
+              <img src="./assets/img/logo6.png" alt="Company 7 Logo">
+              <img src="./assets/img/logo7.png" alt="Company 8 Logo">
+              <img src="./assets/img/logo8.png" alt="Company 9 Logo">
+              <img src="./assets/img/logo9.png" alt="Company 10 Logo">
+              <img src="./assets/img/logo10.png" alt="Company 10 Logo">
+              <img src="./assets/img/logo11.png" alt="Company 10 Logo">
+              <img src="./assets/img/logo12.png" alt="Company 10 Logo">
+              <img src="./assets/img/logo13.png" alt="Company 10 Logo">
+              <img src="./assets/img/logo14.png" alt="Company 10 Logo">
             </div>
           </div>
 
