--- a/graphics.html
+++ b/graphics.html
@@ -206,7 +206,7 @@
                     Make a stand with a consistent brand image. Our team designs and develops logos, colour codes and typography in line with your business values and goals to ensure that the public easily identifies your brand.
                   </p>
 
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
+                  <a href="contact.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -223,7 +223,7 @@
                     Transform complex information into engaging visuals. Our infographics make your data easy to grasp and enhances understanding, thus making your content more shareable and impactful.
                   </p>
 
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
+                  <a href="contact.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -240,7 +240,7 @@
                     Boost your social media presence with eye-catching graphics tailored for each platform. Whether it is creating a post or telling a story, we create aesthetics that will help create engagement amongst the audience.
                   </p>
 
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
+                  <a href="contact.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
