--- a/smo.html
+++ b/smo.html
@@ -214,7 +214,7 @@
                     Tailored strategies for targeted promotion, reach, and conversions in the sphere of Facebook, Instagram, Twitter, and LinkedIn.
                   </p>
 
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
+                  <a href="contact.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -231,7 +231,7 @@
                     High-quality, engaging content designed for your targeted audience and meets the brand values across the products and services you offer.
                   </p>
 
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
+                  <a href="contact.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -248,7 +248,7 @@
                     Detailed performance reports that will help you understand the improvement, participation the effectiveness of your social media campaigns.
                   </p>
 
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
+                  <a href="contact.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
