--- a/web.html
+++ b/web.html
@@ -206,7 +206,7 @@
                     Through Rates, Usability, Keywords Strategy, Interlinking
                   </p>
 
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
+                  <a href="contact.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -224,7 +224,7 @@
                     ensure you are well
                   </p>
 
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
+                  <a href="contact.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -242,7 +242,7 @@
                     quality, and website security.
                   </p>
 
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
+                  <a href="contact.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
