--- a/paidadd.html
+++ b/paidadd.html
@@ -210,7 +210,7 @@
                     highly targeted approach, budget control and get tangible results.
                   </p>
 
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
+                  <a href="contact.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -228,7 +228,7 @@
                     networks such as Facebook, Instagram, LinkedIn and X for enhancement of brand recognition.
                   </p>
 
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
+                  <a href="contact.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -246,7 +246,7 @@
                     customers who have previously interacted with your brand, increasing conversion rates.
                   </p>
 
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
+                  <a href="contact.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
