--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
 
                 <div class="achievement-item">
                   <span id="counter2" class="counter-number">0+</span>
-                  <h3>Clients Served</h3>
+                  <h3>Recoring Clints</h3>
 
                 </div>
               </div>
